--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,13 @@
 [tool.poetry]
 name = "calmao-bot"
-version = "0.1.0"
-description = ""
-authors = ["Your Name <you@example.com>"]
+version = "2.0"
+description = "un bot para gente calmada"
+authors = ["flzubuduuz"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
 discord = "^1.0.1"
 flask = "^1.1.2"
-replit = "^3.0.0"
-cryptography = "^3.4.7"
 
 [tool.poetry.dev-dependencies]
 
