--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,12 @@
 [tool.poetry]
 name = "calmao-bot"
-version = "2.2"
+version = "3.0"
 description = "un bot para gente calmada"
 authors = ["flzubuduuz"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+replit = "^3.0.0"
 discord = "^1.0.1"
 flask = "^1.1.2"
 
